update routing for options

--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -1,16 +1,16 @@
 <div fxFlexFill fxLayout="column" class="padded" fxLayoutGap="15px">
 	<div fxFlex=30>
-		<button fxFlexFill md-raised-button color="primary">
+		<button fxFlexFill md-raised-button color="primary" [routerLink]="['/options/1']">
 			Option 1
 		</button>
 	</div>
 	<div fxFlex=30>
-		<button fxFlexFill md-raised-button color="primary">
+		<button fxFlexFill md-raised-button color="primary" [routerLink]="['/options/2']">
 			Option 2
 		</button>
 	</div>
 	<div fxFlex=30>
-		<button fxFlexFill md-raised-button color="primary">
+		<button fxFlexFill md-raised-button color="primary" [routerLink]="['/options/3']">
 			Option 3
 		</button>
 	</div>
