--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,6 +4,7 @@
 			<a md-tab-link active="true"><md-icon class="home-icon">home</md-icon></a>
 			<a md-tab-link [routerLink]="['/acct/login']">Login</a>
 			<a md-tab-link [routerLink]="['/acct/register']">Register</a>
+			<a md-tab-link [routerLink]="['/home']">Page 1</a>
 		</nav>
 		<nav md-tab-nav-bar *ngIf="acctService.isLoggedIn()">
 			<a title="View current item." md-tab-link active="true"><md-icon class="home-icon">home</md-icon></a>
