--- a/src/app/acct/login/login.component.html
+++ b/src/app/acct/login/login.component.html
@@ -1,7 +1,7 @@
 <div fxFlexFill fxLayout="column" class="full-height" fxLayoutAlign="center center">
 	<div fxFlex=10 class="full-width pad-sides">
 		<nav md-tab-nav-bar>
-			<a md-tab-link [routerLink]="['/home']"><md-icon class="home-icon">home</md-icon></a>
+			<a md-tab-link [routerLink]="['/home']"><i class="fa fa-line-chart fa-lg"></i></a>
 			<a md-tab-link active="true">Login</a>
 			<a md-tab-link [routerLink]="['/acct/register']">Register</a>
 		</nav>
