--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,16 @@
 <div fxFlexFill fxLayout="column" class="full-height" fxLayoutAlign="center center">
-	<div fxFlex=10 class="full-width pad-sides">
-		<nav md-tab-nav-bar *ngIf="!acctService.isLoggedIn()">
-			<a md-tab-link active="true"><i class="fa fa-line-chart fa-lg"></i></a>
+	<div fxFlex=10 class="full-width" fxFlexLayout="column">
+		<nav class="full-width" md-tab-nav-bar *ngIf="!acctService.isLoggedIn()">
+			<a class="icon-nav" md-tab-link active="true"><i class="fa fa-line-chart fa-lg"></i></a>
 			<a md-tab-link [routerLink]="['/acct/login']">Login</a>
 			<a md-tab-link [routerLink]="['/acct/register']">Register</a>
 		</nav>
-		<nav md-tab-nav-bar *ngIf="acctService.isLoggedIn()">
-			<a title="View current item." md-tab-link active="true"><i class="fa fa-line-chart fa-lg"></i></a>
-			<a title="Create new item." md-tab-link [routerLink]="['/home']"><md-icon color="accent" class="home-icon">add_circle</md-icon></a>
-			<a md-tab-link [routerLink]="['/home']">Page 1</a>
-			<a md-tab-link [routerLink]="['/home']">Page 2</a>
-			<a md-tab-link [routerLink]="['/home']">Page 3</a>
+		<nav class="full-width" md-tab-nav-bar *ngIf="acctService.isLoggedIn()">
+			<a class="icon-nav" title="View current item." md-tab-link active="true"><i class="fa fa-line-chart fa-lg"></i></a>
+			<a class="icon-nav" title="Create new item." md-tab-link [routerLink]="['/home/new']"><md-icon color="accent">add_circle</md-icon></a>
+			<a md-tab-link [routerLink]="['/home/page1']">Page 1</a>
+			<a md-tab-link [routerLink]="['/home/page2']">Page 2</a>
+			<a md-tab-link [routerLink]="['/home/page3']">Page 3</a>
 		</nav>
 	</div>
 	<div fxFlex=90 fxLayout="column" class="pad-sides text-center">
