--- a/src/app/acct/register/register.component.html
+++ b/src/app/acct/register/register.component.html
@@ -1,7 +1,6 @@
 <div fxFlexFill fxLayout="column" class="full-height" fxLayoutAlign="center center">
-	<div fxFlex=10 class="full-width pad-sides">
-		<nav md-tab-nav-bar color="primary">
-			<a md-tab-link [routerLink]="['/home']"><i class="fa fa-line-chart fa-lg"></i></a>
+	<div fxFlex=10 class="full-width" fxFlexLayout="column">
+		<nav class="full-width" md-tab-nav-bar color="primary">
 			<a md-tab-link [routerLink]="['/acct/login']">Login</a>
 			<a md-tab-link active="true">Register</a>
 		</nav>
@@ -11,7 +10,7 @@
 			<h1 fxFlex=10 class="full-width">
 				Register
 			</h1>
-			<div fxFlex=90 fxLayout="column" fxLayoutAlign="start center">
+			<div class="pad-bot" fxFlex=90 fxLayout="column" fxLayoutAlign="start center">
 				<md-input-container [ngClass]="setClassUsername()">
 					<input mdInput type="text" name="username" formControlName="username" placeholder="Username" autofocus>
 				</md-input-container>
@@ -26,6 +25,9 @@
 					Register
 				</button>
 			</div>
+			<span class="width-80" fxFlex=90 fxLayout="column" fxLayoutAlign="start center">
+				Already have an account? <a [routerLink]="['/acct/login']"> Login here.</a>
+			</span>
 		</form>
 	</div>
 	<div fxFlex=10></div>
