--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,11 @@
 <div fxFlexFill fxLayout="column" class="full-height" fxLayoutAlign="center center">
 	<div fxFlex=10 class="full-width" fxFlexLayout="column">
-		<nav class="full-width" md-tab-nav-bar *ngIf="!acctService.isLoggedIn()">
+		<nav class="full-width" md-tab-nav-bar *ngIf="!isLoggedIn()">
 			<a class="icon-nav" md-tab-link active="true"><i class="fa fa-line-chart fa-lg"></i></a>
 			<a md-tab-link [routerLink]="['/acct/login']">Login</a>
 			<a md-tab-link [routerLink]="['/acct/register']">Register</a>
 		</nav>
-		<nav class="full-width" md-tab-nav-bar *ngIf="acctService.isLoggedIn()">
+		<nav class="full-width" md-tab-nav-bar *ngIf="isLoggedIn()">
 			<a class="icon-nav" title="View current item." md-tab-link active="true"><i class="fa fa-line-chart fa-lg"></i></a>
 			<a class="icon-nav" title="Create new item." md-tab-link [routerLink]="['/home/new']"><md-icon color="accent">add_circle</md-icon></a>
 			<a md-tab-link [routerLink]="['/home/page1']">Page 1</a>
@@ -14,8 +14,8 @@
 		</nav>
 	</div>
 	<div fxFlex=90 fxLayout="column" class="pad-sides text-center">
-		<h1 fxFlex="50px" *ngIf="!acctService.isLoggedIn()">Default Landing Page - Welcome!</h1>
-		<h1 fxFlex="50px" *ngIf="acctService.isLoggedIn()">Welcome, {{ acctService.username }}</h1>
+		<h1 fxFlex="50px" *ngIf="!isLoggedIn()">Default Landing Page - Welcome!</h1>
+		<h1 fxFlex="50px" *ngIf="isLoggedIn()">Welcome, {{ username }}</h1>
 		<p fxFlex>
 			Spicy jalapeno bacon ipsum dolor amet leberkas incididunt aliqua dolor flank pariatur jowl pastrami. Bacon turkey magna eiusmod dolore enim venison filet mignon. Labore drumstick tempor ribeye strip steak, duis culpa capicola picanha est meatloaf shoulder ut mollit. Aliqua esse salami drumstick dolore ut exercitation do elit proident tenderloin pancetta in. Tempor aliqua minim swine, fugiat shoulder beef ribs meatball.
 			<br><br>
