--- a/src/app/top-nav/top-nav.component.html
+++ b/src/app/top-nav/top-nav.component.html
@@ -3,14 +3,14 @@
     <img src="/assets/ms-icon-310x310.png" class="clickable" (click)="homeClick();">
     <h1 class="clickable" (click)="homeClick();">DSLimited</h1>
   </div>
-  <div fxFlex=50 fxLayoutAlign="end center" *ngIf="!acctService.isLoggedIn()">
+  <div fxFlex=50 fxLayoutAlign="end center" *ngIf="!isLoggedIn()">
     <button md-button (click)="acctClick();"><u>Login</u></button>
   </div>
-  <div fxFlex=50 fxLayoutAlign="end center" *ngIf="acctService.isLoggedIn()">
-    <button md-button [mdMenuTriggerFor]="menu"><md-icon>account_circle</md-icon><u>{{ acctService.username }}</u></button>
+  <div fxFlex=50 fxLayoutAlign="end center" *ngIf="isLoggedIn()">
+    <button md-button [mdMenuTriggerFor]="menu"><md-icon>account_circle</md-icon><u>{{ username }}</u></button>
     <md-menu #menu="mdMenu" [overlapTrigger]="false">
     	<button md-menu-item [routerLink]="['/acct/myaccount']">Settings</button>
-    	<button md-menu-item (click)="acctService.logout();acctClick();">Logout</button>
+    	<button md-menu-item (click)="logout();acctClick();">Logout</button>
     </md-menu>
   </div>
 </div>
