--- a/src/app/home/new-item/new-item.component.html
+++ b/src/app/home/new-item/new-item.component.html
@@ -7,7 +7,7 @@
 		</nav>
 		<nav class="full-width" md-tab-nav-bar *ngIf="isLoggedIn()">
 			<a class="icon-nav" title="View current item." md-tab-link [routerLink]="['/home']"><i class="fa fa-line-chart fa-lg"></i></a>
-			<a class="icon-nav" title="Create new item." md-tab-link active="true"><md-icon color="accent" class="home-icon">add_circle</md-icon></a>
+			<a title="Create new item." md-tab-link active="true"><md-icon color="accent" class="home-icon">add_circle</md-icon></a>
 			<a md-tab-link [routerLink]="['/home/page1']">Page 1</a>
 			<a md-tab-link [routerLink]="['/home/page2']">Page 2</a>
 			<a md-tab-link [routerLink]="['/home/page3']">Page 3</a>
