--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,12 @@
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
-
 html, body {
 	height: 100%;
 	width: 100%;
 	margin: 0;
 	font-family: 'Saira Semi Condensed', sans-serif;
+}
+
+a md-icon {
+    vertical-align: middle;
 }
 
 .overflow {
@@ -48,7 +50,6 @@ html, body {
     width: 3em;
     height: 3em;
     border-radius: 1.5em;
-    background-color: lightblue;
     text-align: center;
     -webkit-transition: all 0.5s linear;
        -moz-transition: all 0.5s linear;
