--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
           <div class="circle clickable" [ngClass]="{'circle-closed': navIsClosed }" (click)="sideNavToggle();"><md-icon>{{ navIcon }}</md-icon></div>
         </div>
         <!-- Main Outlet -->
-        <div fxFlex fxFlex.lt-sm="500px" class="overflow">
+        <div fxFlex fxFlex.lt-sm="100" class="overflow">
           <router-outlet fxFlexFill></router-outlet>
         </div>
       </md-sidenav-container>
