--- a/src/app/option3/item2/item2.component.html
+++ b/src/app/option3/item2/item2.component.html
@@ -1,23 +1,2 @@
-<div fxFlexFill fxLayout="column" class="full-height" fxLayoutAlign="center center">
-	<div fxFlex=10 class="full-width" fxFlexLayout="column">
-		<nav class="full-width" md-tab-nav-bar *ngIf="!isLoggedIn()">
-			<a class="icon-nav" md-tab-link [routerLink]="['/option3']"><i class="fa fa-database fa-lg"></i></a>
-			<a md-tab-link [routerLink]="['/acct/login']">Login</a>
-			<a md-tab-link [routerLink]="['/acct/register']">Register</a>
-		</nav>
-		<nav class="full-width" md-tab-nav-bar *ngIf="isLoggedIn()">
-			<a class="icon-nav" title="View current item." md-tab-link [routerLink]="['/option3']"><i class="fa fa-database fa-lg"></i></a>
-			<a title="Create new item." md-tab-link [routerLink]="['/option3/new']"><md-icon color="primary">add_circle</md-icon></a>
-			<a md-tab-link [routerLink]="['/option3/page1']">Page 1</a>
-			<a md-tab-link active="true" [routerLink]="['/option3/page2']">Page 2</a>
-			<a md-tab-link [routerLink]="['/option3/page3']">Page 3</a>
-		</nav>
-	</div>
-	<div fxFlex=90 fxLayout="column" class="pad-sides text-center">
-		<h1 fxFlex="50px" *ngIf="!isLoggedIn()">Page 2</h1>
-		<h1 fxFlex="50px" *ngIf="isLoggedIn()">Page 2, {{ username }}</h1>
-		<p fxFlex>
-			page2
-		</p>
-	</div>
-</div>
+<h1>Family: {{family.id}}</h1>
+<h2>Genus: {{genus.id}}</h2>
