add minor mobile changes

--- a/src/app/option3/item3/item3.component.html
+++ b/src/app/option3/item3/item3.component.html
@@ -1,4 +1,4 @@
 <h1>Family: {{family.id}}</h1>
 <h2>Genus: {{genus.id}}</h2>
 <h3>Species: {{species}}</h3>
-<img style="width: auto; max-height: 80vh" [src]="'assets/'+species+'.jpg'">
+<img style="max-width: 100vw; max-height: 80vh" [src]="'assets/'+species+'.jpg'">
