--- a/src/app/acct/register/register.component.html
+++ b/src/app/acct/register/register.component.html
@@ -1,8 +1,8 @@
 <div fxFlexFill fxLayout="column" class="full-height" fxLayoutAlign="center center">
   <div fxFlex=10 class="full-width" fxFlexLayout="column">
-    <nav class="full-width" md-tab-nav-bar color="primary">
-      <a md-tab-link [routerLink]="['/acct/login']">Login</a>
-      <a md-tab-link active="true">Register</a>
+    <nav class="full-width" mat-tab-nav-bar color="primary">
+      <a mat-tab-link [routerLink]="['/acct/login']">Login</a>
+      <a mat-tab-link active="true">Register</a>
     </nav>
   </div>
   <div fxFlex=80 class="full-width pad-sides text-center">
@@ -11,17 +11,17 @@
         Register
       </h1>
       <div class="pad-bot" fxFlex=90 fxLayout="column" fxLayoutAlign="start center">
-        <md-input-container [ngClass]="setClassUsername()">
-          <input mdInput type="text" name="username" formControlName="username" placeholder="Username" autofocus>
-        </md-input-container>
-        <md-input-container [ngClass]="setClassEmail()">
-          <input mdInput type="email" name="email" formControlName="email" placeholder="Email">
-        </md-input-container>
-        <md-input-container [ngClass]="setClassPassword()">
-          <input mdInput type="password" name="password" formControlName="password" placeholder="Password">
-        </md-input-container>
+        <mat-input-container [ngClass]="setClassUsername()">
+          <input matInput type="text" name="username" formControlName="username" placeholder="Username" autofocus>
+        </mat-input-container>
+        <mat-input-container [ngClass]="setClassEmail()">
+          <input matInput type="email" name="email" formControlName="email" placeholder="Email">
+        </mat-input-container>
+        <mat-input-container [ngClass]="setClassPassword()">
+          <input matInput type="password" name="password" formControlName="password" placeholder="Password">
+        </mat-input-container>
         <div class="pad"></div>
-        <button md-raised-button color="primary" class="btn-reg" type="submit" [disabled]="!registerForm.valid">
+        <button mat-raised-button color="primary" class="btn-reg" type="submit" [disabled]="!registerForm.valid">
           Register
         </button>
       </div>
