--- a/src/app/home/new-item/new-item.component.html
+++ b/src/app/home/new-item/new-item.component.html
@@ -1,16 +1,16 @@
 <div fxFlexFill fxLayout="column" class="full-height" fxLayoutAlign="center center">
   <div fxFlex=10 class="full-width" fxFlexLayout="column">
-    <nav class="full-width" md-tab-nav-bar *ngIf="!isLoggedIn()">
-      <a class="icon-nav" md-tab-link active="true"><i class="fa fa-line-chart fa-lg"></i></a>
-      <a md-tab-link [routerLink]="['/acct/login']">Login</a>
-      <a md-tab-link [routerLink]="['/acct/register']">Register</a>
+    <nav class="full-width" mat-tab-nav-bar *ngIf="!isLoggedIn()">
+      <a class="icon-nav" mat-tab-link active="true"><i class="fa fa-line-chart fa-lg"></i></a>
+      <a mat-tab-link [routerLink]="['/acct/login']">Login</a>
+      <a mat-tab-link [routerLink]="['/acct/register']">Register</a>
     </nav>
-    <nav class="full-width" md-tab-nav-bar *ngIf="isLoggedIn()">
-      <a class="icon-nav" title="View current item." md-tab-link [routerLink]="['/home']"><i class="fa fa-line-chart fa-lg"></i></a>
-      <a title="Create new item." md-tab-link active="true"><md-icon color="accent" class="home-icon">add_circle</md-icon></a>
-      <a md-tab-link [routerLink]="['/home/page1']">Page 1</a>
-      <a md-tab-link [routerLink]="['/home/page2']">Page 2</a>
-      <a md-tab-link [routerLink]="['/home/page3']">Page 3</a>
+    <nav class="full-width" mat-tab-nav-bar *ngIf="isLoggedIn()">
+      <a class="icon-nav" title="View current item." mat-tab-link [routerLink]="['/home']"><i class="fa fa-line-chart fa-lg"></i></a>
+      <a title="Create new item." mat-tab-link active="true"><mat-icon color="accent" class="home-icon">add_circle</mat-icon></a>
+      <a mat-tab-link [routerLink]="['/home/page1']">Page 1</a>
+      <a mat-tab-link [routerLink]="['/home/page2']">Page 2</a>
+      <a mat-tab-link [routerLink]="['/home/page3']">Page 3</a>
     </nav>
   </div>
   <div fxFlex=90 fxLayout="column" class="pad-sides text-center">
