--- a/src/app/option2/option2.component.html
+++ b/src/app/option2/option2.component.html
@@ -1,16 +1,16 @@
 <div fxFlexFill fxLayout="column" class="full-height" fxLayoutAlign="center center">
   <div fxFlex=10 class="full-width" fxFlexLayout="column">
-    <nav class="full-width" md-tab-nav-bar *ngIf="!isLoggedIn()">
-      <a class="icon-nav" md-tab-link active="true"><i class="fa fa-pencil fa-lg"></i></a>
-      <a md-tab-link [routerLink]="['/acct/login']">Login</a>
-      <a md-tab-link [routerLink]="['/acct/register']">Register</a>
+    <nav class="full-width" mat-tab-nav-bar *ngIf="!isLoggedIn()">
+      <a class="icon-nav" mat-tab-link active="true"><i class="fa fa-pencil fa-lg"></i></a>
+      <a mat-tab-link [routerLink]="['/acct/login']">Login</a>
+      <a mat-tab-link [routerLink]="['/acct/register']">Register</a>
     </nav>
-    <nav class="full-width" md-tab-nav-bar *ngIf="isLoggedIn()">
-      <a class="icon-nav" title="View current item." md-tab-link active="true"><i class="fa fa-pencil fa-lg"></i></a>
-      <a title="Create new item." md-tab-link [routerLink]="['/option2/new']"><md-icon color="primary">add_circle</md-icon></a>
-      <a md-tab-link [routerLink]="['/option2/page1']">Page 1</a>
-      <a md-tab-link [routerLink]="['/option2/page2']">Page 2</a>
-      <a md-tab-link [routerLink]="['/option2/page3']">Page 3</a>
+    <nav class="full-width" mat-tab-nav-bar *ngIf="isLoggedIn()">
+      <a class="icon-nav" title="View current item." mat-tab-link active="true"><i class="fa fa-pencil fa-lg"></i></a>
+      <a title="Create new item." mat-tab-link [routerLink]="['/option2/new']"><mat-icon color="primary">add_circle</mat-icon></a>
+      <a mat-tab-link [routerLink]="['/option2/page1']">Page 1</a>
+      <a mat-tab-link [routerLink]="['/option2/page2']">Page 2</a>
+      <a mat-tab-link [routerLink]="['/option2/page3']">Page 3</a>
     </nav>
   </div>
   <div fxFlex=90 fxLayout="column" class="pad-sides text-center">
